--- a/index.html
+++ b/index.html
@@ -250,46 +250,54 @@
         <div class="project-item">
             <h4>Project Task11</h4>
             <a href="https://jssg33.github.io/usc242/project/wireframecomplete/figmacomplete.mp4"><img src="./images/TBD.png" alt="FigmaMovie"></a>
-            <h5>TBD</h5>
+            <h5>JSON Parsing</h5>
             <h6>TBD</h6>
         </div>
 		<div class="project-item">
             <h4>Project Task12</h4>
             <a href="https://jssg33.github.io/usc242/project/wireframecomplete/figmacomplete.pdf"><img src="./images/TBD.png" alt="FigmaCompletePDF"></a>
-            <h5>TBD</h5>
+            <h5>Contact Form and JavaScript</h5>
             <h6>TBD</h6>
         </div>
         <div class="project-item">
             <h4>Project Task13</h4>
             <a href="https://jssg33.github.io/usc242/project/wireframecomplete/figmacomplete.mp4"><img src="./images/TBD.png" alt="FigmaMovie"></a>
-            <h5>TBD</h5>
+            <h5>React Site Components and Pages</h5>
             <h6>TBD</h6>
         </div>
 		        <div class="project-item">
             <h4>Project Task14</h4>
             <a href="https://jssg33.github.io/usc242/project/wireframe/Wireframe.pdf"><img src="./images/TBD.png" alt="FigmaPDF"></a>
-            <h5>TBD</h5>
+            <h5>React Site with JavaScript</h5>
             <h6>TBD</h6>
         </div>
         <div class="project-item">
             <h4>Project Task15</h4>
             <a href="https://jssg33.github.io/usc242/project/wireframe/Wireframe.mp4"><img src="./images/TBD.png" alt="FigmaMovie"></a>
-            <h5>TBD</h5>
+            <h5>More JS and Server Get Request</h5>
             <h6>TBD</h6>
         </div>
         <div class="project-item">
             <h4>Project Task16</h4>
             <a href="https://jssg33.github.io/usc242/project/wireframecomplete/figmacomplete.pdf"><img src="./images/TBD.png" alt="FigmaCompletePDF"></a>
-            <h5>TBD</h5>
+            <h5>Post Request</h5>
             <h6>TBD</h6>
         </div>
         <div class="project-item">
             <h4>Project Task17</h4>
             <a href="https://jssg33.github.io/usc242/project/wireframecomplete/figmacomplete.mp4"><img src="./images/TBD.png" alt="FigmaMovie"></a>
-            <h5>TBD</h5>
+            <h5>Edit and Delete Request</h5>
+            <h6>TBD</h6>
+        </div>
+			<div class="project-item">
+            <h4>Project Task18</h4>
+            <a href="https://jssg33.github.io/usc242/project/wireframecomplete/figmacomplete.mp4"><img src="./images/TBD.png" alt="FigmaMovie"></a>
+            <h5>Server CRUD and MongoDB</h5>
             <h6>TBD</h6>
         </div>
     </div>
+
+
 </section>    
     <!-- IDEA SECTIONS -->
     <section class="ideas">
