--- a/assignments/11-classes/artists.html
+++ b/assignments/11-classes/artists.html
@@ -75,7 +75,7 @@
     <!-- CORRECT CALLBACK -->
     <script>
         document.addEventListener("DOMContentLoaded", () => {
-            loadJSON(loadArtistsGallery);
+            loadJSON(loadArtistGallery);
         });
     </script>
 
