--- a/assignments/11-classes/artists.html
+++ b/assignments/11-classes/artists.html
@@ -68,7 +68,7 @@
         </div>
 
         <footer>
-            <p class="bottomcredits">&copy; 2026 - Cocky Consulting - CircusFrame Music Player</p>
+           &copy; 2026 - Cocky Consulting - CircusFrame Music Player
         </footer>
     </div>
 
