--- a/assignments/11-classes/index.html
+++ b/assignments/11-classes/index.html
@@ -25,7 +25,7 @@
 <body class="w3-light-grey">
 
     <header class="w3-container w3-black w3-center">
-        <h1>My Music Player</h1>
+        <span align="center"><h1>My Music Player</h1></span>
     </header>
     <!-- NAV BAR -->
     <div class="w3-bar w3-blue" style="text-align: center;" align="center">
