--- a/assignments/11-classes/albums.html
+++ b/assignments/11-classes/albums.html
@@ -21,7 +21,7 @@
 <body class="w3-light-grey">
 
     <header class="w3-container w3-black w3-center">
-        <h1>Browse by Album</h1>
+        <span align="center"><h1>Browse by Album</h1></span>
     </header>
 
     <!-- NAV BAR -->
