--- a/assignments/11-classes/genres.html
+++ b/assignments/11-classes/genres.html
@@ -23,7 +23,7 @@
 <body class="w3-light-grey">
 
     <header class="w3-container w3-black w3-center">
-        <h1>Browse by Genre</h1>
+        <span align="center"><h1>Browse by Genre</h1></span>
     </header>
 
     <!-- NAV BAR -->
