--- a/assignments/11-classes/index.html
+++ b/assignments/11-classes/index.html
@@ -65,7 +65,7 @@
         </div>
     </div>
     <footer>
-        <p id="bottomcredits">&copy 2026 - Cocky Consulting - CircusFrame Music Player</p>
+        &copy 2026 - Cocky Consulting - CircusFrame Music Player
     </footer>
 </div>
 
