--- a/assignments/11-classes/genres.html
+++ b/assignments/11-classes/genres.html
@@ -65,7 +65,7 @@
         </div>
 
         <footer>
-            <p class="bottomcredits">&copy; 2026 - Cocky Consulting - CircusFrame Music Player</p>
+            &copy; 2026 - Cocky Consulting - CircusFrame Music Player
         </footer>
     </div>
 
