--- a/assignments/11-classes/albums.html
+++ b/assignments/11-classes/albums.html
@@ -59,7 +59,7 @@
                 </div>
 
                 <footer class="w3-container w3-blue w3-center">
-                    <p>&copy; 2026 - Cocky Consulting - CircusFrame Music Player</p>
+                    &copy; 2026 - Cocky Consulting - CircusFrame Music Player
                 </footer>
 
             </div>
