--- a/index.html
+++ b/index.html
@@ -377,8 +377,8 @@
 
 </section>
 
-<footer>
-    <p>&copy; 2025 Cocky Consulting, Inc.</p>
+<footer style="background-color: black; color: white;>
+    &copy; 2025 Cocky Consulting, Inc.
 </footer>
 
 </body>
