--- a/assignments/11-classes/albums.html
+++ b/assignments/11-classes/albums.html
@@ -63,7 +63,8 @@
             </div>
         </div>
 
-        <footer>
+       
+        <footer style="background-color: black; color: white;>
             &copy; 2026 - Cocky Consulting - CircusFrame Music Player
         </footer>
 
