--- a/assignments/11-classes/artists.html
+++ b/assignments/11-classes/artists.html
@@ -60,7 +60,8 @@
             </div>
         </div>
 
-        <footer>
+        
+        <footer style="background-color: black; color: white;>
            &copy; 2026 - Cocky Consulting - CircusFrame Music Player
         </footer>
     </div>
