--- a/assignments/11-classes/genres.html
+++ b/assignments/11-classes/genres.html
@@ -62,7 +62,8 @@
             </div>
         </div>
 
-        <footer>
+       
+        <footer style="background-color: black; color: white; text-align: center;">
             &copy; 2026 - Cocky Consulting - CircusFrame Music Player
         </footer>
     </div>
