--- a/assignments/11-classes/index.html
+++ b/assignments/11-classes/index.html
@@ -62,7 +62,7 @@
             </footer>
         </div>
     </div>
-    <footer>
+    <footer style="background-color: black; color: white; text-align: center;">
         &copy 2026 - Cocky Consulting - CircusFrame Music Player
     </footer>
 </div>
