--- a/assignments/11-classes/albums.html
+++ b/assignments/11-classes/albums.html
@@ -56,7 +56,7 @@
                     </div>
                 </div>
 
-                <footer class="w3-container w3-blue w3-center">
+           <footer style="background-color: black; color: white; text-align: center;">    
                     &copy; 2026 - Cocky Consulting - CircusFrame Music Player
                 </footer>
 
