--- a/assignments/11-classes/artists.html
+++ b/assignments/11-classes/artists.html
@@ -61,7 +61,7 @@
         </div>
 
         
-        <footer style="background-color: black; color: white;>
+  <footer style="background-color: black; color: white; text-align: center;">
            &copy; 2026 - Cocky Consulting - CircusFrame Music Player
         </footer>
     </div>
