--- a/assignments/11-classes/artists.html
+++ b/assignments/11-classes/artists.html
@@ -54,8 +54,8 @@
                     </div>
                 </div>
 
-                <footer class="w3-container w3-blue w3-center">
-                    <p>&copy; 2026 - Cocky Consulting - CircusFrame Music Player</p>
+               <footer style="background-color: black; color: white; text-align: center;">
+                    &copy; 2026 - Cocky Consulting - CircusFrame Music Player
                 </footer>
             </div>
         </div>
