--- a/assignments/11-classes/albums.html
+++ b/assignments/11-classes/albums.html
@@ -64,13 +64,12 @@
         </div>
 
        
-        <footer style="background-color: black; color: white;>
+       <footer style="background-color: black; color: white; text-align: center; height: 50px;">
             &copy; 2026 - Cocky Consulting - CircusFrame Music Player
         </footer>
 
     </div>
 
-    <!-- CORRECT CALLBACK -->
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             loadJSON(loadAlbumGallery);
