--- a/assignments/11-classes/albums.html
+++ b/assignments/11-classes/albums.html
@@ -55,10 +55,14 @@
                         <iframe id="modalYoutube" width="100%" height="315" src="" allowfullscreen></iframe>
                     </div>
                 </div>
+        <footer class="w3-container w3-blue w3-center" style="padding: 20px;">
+            <button onclick="closeModal()" 
+            class="w3-button w3-red w3-xlarge" 
+            style="width: 90%; margin: 10px auto; border-radius: 8px;">
+        Close
+            </button>
+        </footer>
 
-           <footer style="background-color: black; color: white; text-align: center;">    
-                    &copy; 2026 - Cocky Consulting - CircusFrame Music Player
-                </footer>
 
             </div>
         </div>
