--- a/assignments/11-classes/artists.html
+++ b/assignments/11-classes/artists.html
@@ -54,9 +54,14 @@
                     </div>
                 </div>
 
-               <footer style="background-color: black; color: white; text-align: center;">
-                    &copy; 2026 - Cocky Consulting - CircusFrame Music Player
-                </footer>
+            <footer class="w3-container w3-blue w3-center" style="padding: 20px;">
+            <button onclick="closeModal()" 
+            class="w3-button w3-red w3-xlarge" 
+            style="width: 90%; margin: 10px auto; border-radius: 8px;">
+            Close
+            </button>
+            </footer>
+
             </div>
         </div>
 
