--- a/assignments/11-classes/index.html
+++ b/assignments/11-classes/index.html
@@ -59,7 +59,7 @@
 
 <footer class="w3-container w3-blue w3-center" style="padding: 20px;">
     <button onclick="closeModal()" 
-            class="w3-button w3-red w3-xlarge" 
+            class="w3-button w3-black w3-large" 
             style="width: 90%; margin: 10px auto; border-radius: 8px;">
         Close
     </button>
