--- a/project/part5htmlcomplete/index.html
+++ b/project/part5htmlcomplete/index.html
@@ -418,5 +418,10 @@ background-color: #00cc44;
 <footer>
     © 2026 Greenville Associates Enterprise Software. All rights reserved.
 </footer>
+<script src="./js/slideshow.js"></script>
+<script>document.addEventListener("DOMContentLoaded", () => {
+        slideshow();
+    });
+</script>
 </body>
 </html>
