--- a/project/part5htmlcomplete/index.html
+++ b/project/part5htmlcomplete/index.html
@@ -419,9 +419,7 @@ background-color: #00cc44;
     © 2026 Greenville Associates Enterprise Software. All rights reserved.
 </footer>
 <script src="./js/slideshow.js"></script>
-<script>document.addEventListener("DOMContentLoaded", () => {
-        slideshow();
-    });
+<script>
 </script>
 </body>
 </html>
