--- a/index.html
+++ b/index.html
@@ -242,10 +242,16 @@
 
 		
         <div class="project-item">
-            <h4>Project Task10</h4>
+            <h4>Project Task10A</h4>
             <a href="https://jssg33.github.io/usc242/project/part5/index.html"><img src="./images/homepage.png" alt="HTML Complete"></a>
             <h5>HTML Site Complete</h5>
             <h6>HTML Final Pages</h6>
+        </div>
+		<div class="project-item">
+            <h4>Project Task10B</h4>
+            <a href="https://jssg33.github.io/usc242/project/part5htmlcomplete/index.html"><img src="./images/homepage.png" alt="HTML Complete"></a>
+            <h5>Improve HTML Site</h5>
+            <h6>HTML Final Pages - Draft2</h6>
         </div>
         <div class="project-item">
             <h4>Project Task11</h4>
