--- a/assignments/11-classes/index.html
+++ b/assignments/11-classes/index.html
@@ -36,26 +36,43 @@
     <div class="container2">
     <div id="gallery" class="w3-padding"></div>
 
-    <!-- Modal -->
-    <div id="songModal" class="w3-modal">
-        <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
-            <header class="w3-container w3-blue">
-                <span onclick="document.getElementById('songModal').style.display='none'"
-                      class="w3-button w3-display-topright">&times;</span>
-                <h2 id="modalTitle"></h2>
-            </header>
+<--Modal Updated Left/Right Design as per Spec -->
+  <div id="songModal" class="w3-modal">
+    <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:800px">
+        <header class="w3-container w3-blue">
+            <span onclick="document.getElementById('songModal').style.display='none'"
+                  class="w3-button w3-display-topright">&times;</span>
+            <h2 id="modalTitle"></h2>
+        </header>
 
-            <div class="w3-container">
-                <img id="modalCover" style="width:100%;height:300px;object-fit:cover;">
+        <div class="w3-container" style="display:flex; gap:20px; padding:20px;">
+
+            <!-- LEFT COLUMN: YouTube Player -->
+            <div style="flex:1; min-width:0;">
+                <iframe id="modalYoutube"
+                        width="100%"
+                        height="315"
+                        src=""
+                        allowfullscreen
+                        style="border:0;">
+                </iframe>
+            </div>
+
+            <!-- RIGHT COLUMN: Song Info -->
+            <div style="flex:1; min-width:0;">
+                <img id="modalCover"
+                     style="max-width:200px; max-height:200px; width:auto; height:auto; object-fit:cover; display:block; margin-bottom:10px;">
+
                 <p><b>Artist:</b> <span id="modalArtist"></span></p>
                 <p><b>Album:</b> <span id="modalAlbum"></span></p>
                 <p><b>Year:</b> <span id="modalYear"></span></p>
                 <p><b>Genre:</b> <span id="modalGenre"></span></p>
-
-                <div class="w3-center w3-margin">
-                    <iframe id="modalYoutube" width="100%" height="315" src="" allowfullscreen></iframe>
-                </div>
             </div>
+
+        </div>
+    </div>
+</div>
+
 
 <footer class="w3-container w3-blue w3-center" style="padding: 20px;">
     <button onclick="closeModal()" 
