--- a/assignments/11-classes/index.html
+++ b/assignments/11-classes/index.html
@@ -36,7 +36,7 @@
     <div class="container2">
     <div id="gallery" class="w3-padding"></div>
 
-<--Modal Updated Left/Right Design as per Spec -->
+<!--Modal Updated Left/Right Design as per Spec -->
   <div id="songModal" class="w3-modal">
     <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:800px">
         <header class="w3-container w3-blue">
