--- a/assignments/11-classes/apitest.html
+++ b/assignments/11-classes/apitest.html
@@ -79,10 +79,10 @@
     </footer>
 </div>
 
-    <script>
-    document.addEventListener("DOMContentLoaded", () => {
-        loadJSON(loadHomeGallery);
-    });
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+    loadAllSongs(loadHomeGallery);
+});
 </script>
 
 </body>
