--- a/assignments/11-classes/index.html
+++ b/assignments/11-classes/index.html
@@ -31,6 +31,7 @@
         <a href="genres.html" class="w3-bar-item w3-button">Browse by Genre</a>
         <a href="artists.html" class="w3-bar-item w3-button">Browse By Artists</a>
         <a href="albums.html" class="w3-bar-item w3-button">Browse By Albums</a>
+        <a href="albums.html" class="w3-bar-item w3-button">Music with Express APIs</a>
     </div>
     
     <div class="container2">
