--- a/assignments/11-classes/artists.html
+++ b/assignments/11-classes/artists.html
@@ -28,6 +28,7 @@
         <a href="genres.html" class="w3-bar-item w3-button">Genres</a>
         <a href="artists.html" class="w3-bar-item w3-button w3-white">Artists</a>
         <a href="albums.html" class="w3-bar-item w3-button">Albums</a>
+        <a href="apitest.html" class="w3-bar-item w3-button">Music with Express APIs</a>
     </div>
     
     <div class="container2">
