--- a/assignments/11-classes/genres.html
+++ b/assignments/11-classes/genres.html
@@ -30,6 +30,7 @@
         <a href="genres.html" class="w3-bar-item w3-button w3-white">Genres</a>
         <a href="artists.html" class="w3-bar-item w3-button">Artists</a>
         <a href="albums.html" class="w3-bar-item w3-button">Albums</a>
+        <a href="apitest.html" class="w3-bar-item w3-button">Music with Express APIs</a>
     </div>
 
     <div class="container2">
