--- a/assignments/11-classes/index.html
+++ b/assignments/11-classes/index.html
@@ -61,8 +61,7 @@
 
             <!-- RIGHT COLUMN: Song Info -->
             <div style="flex:1; min-width:0;">
-                <img id="modalCover">
-
+                <span align="center"><img id="modalCover"></span>
                 <p><b>Artist:</b> <span id="modalArtist"></span></p>
                 <p><b>Album:</b> <span id="modalAlbum"></span></p>
                 <p><b>Year:</b> <span id="modalYear"></span></p>
