--- a/assignments/11-classes/apitest.html
+++ b/assignments/11-classes/apitest.html
@@ -61,9 +61,7 @@
 
             <!-- RIGHT COLUMN: Song Info -->
             <div style="flex:1; min-width:0;">
-                <img id="modalCover"
-                     style="max-width:200px; max-height:200px; width:auto; height:auto; object-fit:cover; display:block; margin-bottom:10px;">
-
+                <span align="center"><img id="modalCover"></span>
                 <p><b>Artist:</b> <span id="modalArtist"></span></p>
                 <p><b>Album:</b> <span id="modalAlbum"></span></p>
                 <p><b>Year:</b> <span id="modalYear"></span></p>
