--- a/project/part5htmlcomplete/index.html
+++ b/project/part5htmlcomplete/index.html
@@ -418,7 +418,7 @@ background-color: #00cc44;
 <footer>
     © 2026 Greenville Associates Enterprise Software. All rights reserved.
 </footer>
-<script src="./js/slideshow.js"></script>
+<script type="module" src="./js/slideshow.js"></script>
 <script>
 </script>
 </body>
