--- a/project/part5htmlcomplete/products/fusion.html
+++ b/project/part5htmlcomplete/products/fusion.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -8,138 +8,11 @@
 <link rel="stylesheet" href="./css/site.css"> 
 <link rel="stylesheet" href="./css/layout.css"> 
 <link rel="stylesheet" href="./css/greenvillemiddle.css">  
-<link rel="stylesheet" href="./css/greenville.css">  
+<link rel="stylesheet" href="./css/greenville.css"> 
+<link rel="stylesheet" href="./css/products.css">  
 <title>Greenville Associates Enterprise Software | Enterprise Licensing</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-   .right-links { padding: var(--space-1); /* becomes 4px */ 
-				 margin-bottom: var(--space-2); /* becomes 16px */ 
-				gap: 4px;
-				}
-  /* Thumbnail slider */
-  .sales-slider {
-    position: relative;
-    width: 999px;
-    height: 133px;
-    margin: 10px auto;
-    overflow: hidden;
-  }
-
-  .slider-window {
-    width: 999px;
-    height: 133px;
-    overflow: hidden;
-  }
-
-  .slides {
-    display: flex;
-    transition: transform 0.4s ease;
-  }
-
-
-.slide {
-  min-width: 200px;      /* smaller, cleaner */
-  height: 120px;
-  cursor: pointer;
-  padding: 2px;
-  border-radius: 4px;
-  overflow: hidden;
-  opacity: 0.7;
-  transition: opacity 0.2s ease, transform 0.2s ease;
-}
-
-.slide img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;     /* keeps aspect ratio while filling */
-  border-radius: 4px;
-}
-
-.slide.active {
-  opacity: 1;
-  transform: scale(1.05);
-  outline: 2px solid #00e676;
-}
-
-H4{ color: darkgreen;}
-	
-  .prev, .next {
-    position: absolute;
-    top: 40%;
-    background: rgba(0,0,0,0.4);
-    color: white;
-    border: none;
-    padding: 6px 10px;
-    cursor: pointer;
-    font-size: 18px;
-  }
-
-  .prev { left: 0; }
-  .next { right: 0; }
-
-.product-card {
-    width: 300px;
-    min-height: 200px;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    background: #fff;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-}
-.products { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; }
-.product-features { columns: 2; column-gap: 20px; padding-left: 20px; }
-button { vertical-align: middle; text-align: center; color: white; background-color: black; width: 150px; margin: 0 auto; }
-	.emphasis {
-  margin-top: 40px;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-}
-
-.emphasis-inner {
-  background: #000;              /* black background */
-  color: #b8ff4f;                /* kelly‑green text */
-  padding: 40px 50px;
-  border-radius: 12px;
-  max-width: 600px;
-  width: 100%;
-  box-shadow: 0 0 20px rgba(0,0,0,0.4);
-}
-
-.emphasis-inner h3 {
-  margin-bottom: 8px;
-  font-size: 1.4rem;
-  color: #7CFC00;                /* brighter kelly green for headers */
-}
-
-.emphasis-inner p {
-  margin-bottom: 24px;
-  font-size: 1rem;
-  color: #d9ffd9;                /* softer green for readability */
-}
-
-.emphasis-inner p:last-child {
-  margin-bottom: 0;
-}
-
-#centercourt {
-  width: 1000px;
-  height: 300px;
-  display: block;
-  margin: 0 auto;        /* centers it */
-  border: 0;
-  background: #000;      /* optional: prevents white flash */
-}
-
-a
-{
-font-size: 10pt;
-}
-
-.feature-card:hover
-{
-background-color: #00cc44;
-}
 </style>
 
 </head>
@@ -206,19 +79,19 @@ background-color: #00cc44;
 
 <nav>
     <ul class="menu">
-        <li><a href="licenses6.html">Products</a></li>
+        <li><a href="../licenses6.html">Products</a></li>
 
         <li class="dropdown">
-            <a href="./deployments/deployments.html">Deployment ▾</a>
+            <a href="../deployments/deployments.html">Deployment ▾</a>
             <ul class="dropdown-content">
-                <li><a href="./deployments/deployments.html">Deployment Options</a></li>
+                <li><a href="../deployments/deployments.html">Deployment Options</a></li>
             </ul>
         </li>
 
         <li class="dropdown">
-            <a href="./licensing/licensing.html">Licensing ▾</a>
+            <a href="../licensing/licensing.html">Licensing ▾</a>
             <ul class="dropdown-content">
-                <li><a href="./licensing/licensing.html">Licensing Portal Pages</a></li>
+                <li><a href="../licensing/licensing.html">Licensing Portal Pages</a></li>
             </ul>
         </li>
 
@@ -226,12 +99,12 @@ background-color: #00cc44;
         <li class="dropdown">
             <a href="./pricing/wizard.html">Pricing ▾</a>
             <ul class="dropdown-content">
-                <li><a href="./pricing/wizard.html">All Licenses</a></li>
-                <li><a href="./pricing/wizard.html">Wizard</a></li>
+                <li><a href="../pricing/wizard.html">All Licenses</a></li>
+                <li><a href="../pricing/wizard.html">Wizard</a></li>
             </ul>
         </li>
 
-        <li><a href="contacts.html">Contact Sales</a></li>
+        <li><a href="../contacts.html">Contact Sales</a></li>
     </ul>
 </nav>
     <div class="pageheader">
