--- a/project/part5htmlcomplete/deployments/deployments.html
+++ b/project/part5htmlcomplete/deployments/deployments.html
@@ -20,7 +20,7 @@
 
 <body>
 
-<div class="containerNEVER" style="border: solid 2px darkgreen;">
+<div class="containerNEVER" align="center" style="border: solid 2px darkgreen; vertical-align: center;">
 
 <!-- ========================= -->
 <!-- TOP NAV                   -->
