--- a/project/part5htmlcomplete/licensing/licensing.html
+++ b/project/part5htmlcomplete/licensing/licensing.html
@@ -58,7 +58,7 @@ font-size: 10pt;
 
 <body>
 
-<div class="containerNEVER" style="border: solid 2px darkgreen;">
+<div align="center" class="containerNEVER" style="border: solid 2px darkgreen; vertical-align: center;">
 
 <!-- ========================= -->
 <!-- TOP NAV + ICON BAR        -->
