--- a/project/part5htmlcomplete/contacts.html
+++ b/project/part5htmlcomplete/contacts.html
@@ -10,7 +10,9 @@
 <link rel="stylesheet" href="./css/greenville.css">  
 <title>Greenville Associates Enterprise Software | UserContacts</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
+<style>
+h5 {font-size: 9pt;}
+a, li { font-size: 10pt;}
      .top-section {
     display: flex;
     justify-content: center;
@@ -37,7 +39,7 @@
     </style>
 </head>
 <body>
-<div class="containerNEVER">
+<div class="containerNEVER" align="center">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
