--- a/project/part5htmlcomplete/index.html
+++ b/project/part5htmlcomplete/index.html
@@ -251,63 +251,38 @@ background-color: #00cc44;
 	  <!-- Big display -->
   <iframe id="centercourt" width="999" height="300" style="border:0;"></iframe>
 		<BR><BR>
-	<section class="sales-slider">
+	<section class="sales-slider" style="max-width: 80%;">
   	<!-- Thumbnails -->
       <div class="slider-window">
       <div class="slides">
 
         <div class="slide"
              data-url="https://www.youtube.com/embed/dX3KU2eaixY?si=siIhuALGldG9Z0n9"
-             data-link="https://example.com/page1">
+             data-link="https://www.greenvilleassociates.com">
           <img src="./images/fusionoverview.png" alt="Slide 1">
         </div>
 
 		<div class="slide"
-             data-url="./images/slide1.png"
+             data-url="https://youtube.com/embed/4843CTQYqUE?si=4DXFD6i1iIqmu3iE"
              data-link="https://www.greenvilleassociates.com">
-          <img src="./images/slide1.png" alt="Slide 1">
+          <img src="./images/youtube1.png" alt="Slide 1">
         </div>
 		  
         <div class="slide"
-             data-url="./images/slide2.png"
-             data-link="https://example.com/page2">
-          <img src="./images/slide2.png" alt="Slide 2">
+             data-url="https://youtube.com/embed/EL6i53G9F0k?si=rKTu4b_adSj0i62E"
+             data-link="https://www.greenvilleassociates.com">
+          <img src="./images/youtube2.png" alt="Slide 2">
         </div>
 
-        <div class="slide"
-             data-url="./images/slide3.png"
-             data-link="https://example.com/page3">
-          <img src="./images/slide3.png" alt="Slide 3">
-        </div>
-
-        <div class="slide"
-             data-url="./images/slide4.png"
-             data-link="https://example.com/page4">
-          <img src="./images/slide4.png" alt="Slide 4">
-        </div>
-
-        <div class="slide"
-             data-url="./images/slide5.png"
-             data-link="https://example.com/page5">
-          <img src="./images/slide5.png" alt="Slide 5">
-        </div>
-
-        <div class="slide"
-             data-url="./images/slide6.png"
-             data-link="https://example.com/page6">
-          <img src="./images/slide6.png" alt="Slide 6">
-        </div>
-
-      </div>
     </div>
-
+    </div>
     <button class="prev">❮</button>
     <button class="next">❯</button>
 </section>
 	<HR>
 	</div>
 <!-- SECOND FEATURES SECTION -->
-	    <div id="features" class="features">
+	    <div id="features" class="features" style="background-color: black;">
         <h4>Explore</h4><BR>
 
         <div class="feature-grid">
@@ -340,7 +315,7 @@ background-color: #00cc44;
 		<BR><BR>
 	<HR>	
 		<!-- SECOND FEATURES SECTION -->
-    	<div id="features" class="features">
+    	<div id="features" class="features" style="background-color: black;">
         <h4>Manage</h4><BR>
 		<div class="feature-grid">
     
