--- a/project/part5htmlcomplete/deployments/depprise.html
+++ b/project/part5htmlcomplete/deployments/depprise.html
@@ -195,7 +195,7 @@ font-size: 10pt;
     
 </div>
 <header>
-    <h1>Greenville Enterprise Software</h1>
+    <h1><a href="https://www.greenvilleassociates.com">Greenville Enterprise Software</a></h1>
     <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
 
