--- a/project/part5htmlcomplete/licensetypes.html
+++ b/project/part5htmlcomplete/licensetypes.html
@@ -203,7 +203,7 @@ css
     
 </div>
 <header>
-    <h1>Greenville Enterprise Software</h1>
+    <h1><a href="https://www.greenvilleassociates.com">Greenville Enterprise Software</a></h1>
     <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
 
