--- a/project/part5htmlcomplete/pricing/pricing.html
+++ b/project/part5htmlcomplete/pricing/pricing.html
@@ -18,7 +18,7 @@
 
 <body>
 
-<div class="containerNEVER" style="border: solid 2px darkgreen;">
+<div class="containerNEVER" style="border: solid 2px darkgreen; margin-left: 30px;">
 
 <!-- ========================= -->
 <!-- TOP NAV + ICON BAR        -->
@@ -83,7 +83,7 @@
 <section class="main-content">
 
 <!-- ENTERPRISE PRICING -->
-<section id="pricing-enterprise">
+<section id="pricing-enterprise" style="margin-left:50px;">
     
     <div class="pageheader">
         <hr>
@@ -91,7 +91,7 @@
         <hr>
     </div>
 
-    <div class="products">
+    <div class="products" style="margin-left: 20px;">
 
         <div class="product-card">
             <h3>Enterprise Site License – Unlimited</h3>
