--- a/project/part5htmlcomplete/index.html
+++ b/project/part5htmlcomplete/index.html
@@ -247,8 +247,8 @@ background-color: #00cc44;
 <!-- FIRST FEATURES SECTION -->
 	<div id="features" class="features">
 	<HR>
-	<h4>Consider</h4><BR>
-	  <!-- Big display -->
+	<span style="margin-left: 30px;"><h4>Consider</h4></span><BR>
+		  <!-- Big display -->
   <iframe id="centercourt" width="999" height="300" style="border:0;"></iframe>
 		<BR><BR>
 	<section class="sales-slider" style="max-width: 80%;">
@@ -282,11 +282,11 @@ background-color: #00cc44;
 	<HR>
 	</div>
 <!-- SECOND FEATURES SECTION -->
-	    <div id="features" class="features" style="background-color: black;">
-        <h4>Explore</h4><BR>
+	    <div id="features" class="features" style="background-color: black; height: 500px;">
+        <span style="margin-left: 30px;"><h4>Explore</h4></span><BR>
 
         <div class="feature-grid">
-
+          <BR><BR>
             <a href="https://fusion.greenvilleassociates.com" target="_blank" class="feature-card">
                 <img src="./images/image1.png" width="100px" height="100px" alt="Feature Icon">
                 <h5 style="text-align: center;">FusionBasics</h5>
@@ -309,16 +309,16 @@ background-color: #00cc44;
                 <img src="./images/image4.png" width="100px" height="100px" alt="Feature Icon">
                 <h5 style="text-align: center;">Pricing Wizard</h5>
                 <p>Develop Pricing for Utility Usage, Site Licenses, and Cloud/Hybrid Options.</p>
-            </a>
+            </a><BR><BR>
 		</div>
         </div>
 		<BR><BR>
 	<HR>	
 		<!-- SECOND FEATURES SECTION -->
-    	<div id="features" class="features" style="background-color: black;">
-        <h4>Manage</h4><BR>
+    	<div id="features" class="features" style="background-color: black; height: 500px;">
+        <span style="margin-left: 30px;"><h4>Manage</h4></span><BR>
 		<div class="feature-grid">
-    
+    <BR><BR>
 				<a href="mylicenses.html" class="feature-card">
                 <img src="./images/image1.png" width="100px" height="100px" alt="Feature Icon">
                 <h5 style="text-align: center;">MyLicenses</h5>
@@ -339,7 +339,7 @@ background-color: #00cc44;
                 <h5 style="text-align: center;">CorporateActions</h5>
                 <p>Manage and Monitor Enterprise Actions, and Security.</p>
             </a>
-			
+			  <BR><BR>
         </div>
     	</div>
 	<HR>
@@ -352,6 +352,9 @@ background-color: #00cc44;
 
     <!-- CENTER COLUMN: MIAMI IMAGES -->
     <div class="mid-col">
+       <h3>Corporate Pages</h3>
+        <hr>
+        <li><a href="welcome.html" target="_blank">Welcome Page</a></li>
         <img src="./images/miami1.jpg" style="width:48%; border-radius:5px;">
         <img src="./images/miami3.jpg" style="width:48%; border-radius:5px;">
     </div>
