--- a/project/part5htmlcomplete/index.html
+++ b/project/part5htmlcomplete/index.html
@@ -156,7 +156,7 @@
 	<HR>
 	</div>
 <!-- SECOND FEATURES SECTION -->
-	    <div id="features" class="features" style="background-color: lightgrey; height: 500px;">
+	    <div id="features" class="features" style="background-color: white; height: 500px;">
         <div style="margin-left: 30px;"><h4>Explore</h4></div><BR>
 
         <div class="feature-grid">
@@ -189,7 +189,7 @@
 		<BR><BR>
 	<HR>	
 		<!-- SECOND FEATURES SECTION -->
-    	<div id="features" class="features" style="background-color: lightgrey; height: 500px;">
+    	<div id="features" class="features" style="background-color: white; height: 500px;">
         <div style="margin-left: 30px;"><h4>Manage</h4></div><BR>
 		<div class="feature-grid">
     <BR>
@@ -228,9 +228,11 @@
     <div class="mid-col">
        <h3>Corporate Pages</h3>
         <hr>
+        <ul class="quick-links">
         <li><a href="welcome.html" target="_blank">Welcome Page</a></li>
         <img src="./images/miami1.jpg" style="width:48%; border-radius:5px;">
         <img src="./images/miami3.jpg" style="width:48%; border-radius:5px;">
+        </ul>
     </div>
     <!-- LEFT COLUMN: QUICK LINKS -->
     <div class="mid-col">
