--- a/project/part5htmlcomplete/index.html
+++ b/project/part5htmlcomplete/index.html
@@ -152,11 +152,11 @@
     </div>
     <button class="prev">❮</button>
     <button class="next">❯</button>
-</section>
+</section><BR>
 	<HR>
 	</div>
 <!-- SECOND FEATURES SECTION -->
-	    <div id="features" class="features" style="background-color: white; height: 500px;">
+	    <div id="features" class="features">
         <div style="margin-left: 30px;"><h4>Explore</h4></div><BR>
 
         <div class="feature-grid">
@@ -186,10 +186,9 @@
             </a>
 		</div>
         </div>
-		<BR>
 	<HR>	
 		<!-- SECOND FEATURES SECTION -->
-    	<div id="features" class="features" style="background-color: white; height: 500px;">
+    	<div id="features" class="features">
         <div style="margin-left: 30px;"><h4>Manage</h4></div><BR>
 		<div class="feature-grid">
     <BR>
@@ -216,7 +215,7 @@
 			   </div>
     	</div>
 	<HR>
-</section>
+</section><BR>
 <div class="bottom-sections">
 	
 <section class="middle-columns" style="background-color: lightgrey;">
